# COMPX527_BAG

./: .gitattributes  .gitignore  DEPLOYMENT.md  README.md  __labels.csv  ansible.cfg  cleanup.yml  label_csv_helper.py  my_prog.py  portal.yml  prediction.yml  pyproject.toml  setup.cfg
Ansible-playbook/S3/create/: main.yml  main.yml.bak
Ansible-playbook/nec2/: hosts  site.yml
Ansible-playbook/nec2/roles/ec2-provision/defaults/: main.yml
Ansible-playbook/nec2/roles/ec2-provision/handlers/: main.yml
Ansible-playbook/nec2/roles/ec2-provision/tasks/: main.yml
Ansible-playbook/nec2/roles/ec2-provision/tests/: test.yml
Ansible-playbook/nec2/roles/loadbalancer/vars/: main.yml
demo/: demo.py
deployment/: README.md  main.yml  portal.yml  prediction.yml  requirements.yml
ec2_src/: add_notifications.sh  config.php  portal.php  stream.php  submit.php
envs/: req.txt
lambda_src/: notify.py  predict.py
policies/: Dynamo.json  SQS.json  cloudwatch.json  invokeLambda.json  notify.json  portal.json  predict.json
portal_src/: add_notifications.sh  config.php  create_tables.sh  httpd.conf  portal.css  submit.php
predictor_src/: Dockerfile  build_and_push.sh  build_and_push_predictor.sh  create_json_sample.py  datasets.py  dcsass_dataloader.py  litautoencoder.py  main.py  model.ckpt  predict.py  predictor.py  predictor_no_pl.py  scr.py  trainer.py  transforms.py
sns_sqs_email_src/: Lambda_Email_Address_Verification.py  Lambda_User_Notification.js  Send_Email_To_Queue.py  sns_sqs_email.py
src/: litautoencoder.py  my_prog.py  output.txt  predict.py  transforms.py
(+17 files in other folders)
