[metadata]
name = COMPX527-BAG
version = 0.0.1
author = Behaviour Anomaly Group
description = WS CC App Service to detect suspicious behaviour on submitted CCTV footage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lostminty/COMPX527_BAG/
project_urls =
    Bug Tracker = https://github.com/lostminty/COMPX527_BAG/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
